Updating swagger spec logic to use Yaml module to update the swagger spec for the instance of Link rather than using find/replace. This should resolve the fortify scan issue related to the swagger spec missing a security definition, as well.
